@@ -14,7 +14,6 @@ JArmEmu is powered by an ARMv7 interpreter made *Ex Nihilo* for this project.
 Currently, known limitations or differences with the real architecture:
 - Carry flag not updated when using the S condition on ASR and ROR
 - SWI instruction is not implemented
-- RRX as an instruction is not implemented
 
 ## Licence
 This project was created by Kévin "FoxYinx" TOLLEMER and Alexandre "Deleranax" LECONTE, students at INSA Rennes (independent
