@@ -10,3 +10,4 @@
 - Adding AtlantaFx theme (instead of JavaFx Moderna with a bit of BootstrapFx)
 - Adding support for Dark & Light themes
 - Legacy Parser now works when selected in the drop down menu (its use is still not recommended nonetheless)
+- RRX as an instruction is now fully supported
